tests/language_modules/10_expressions/valid/boolean_logic.vf
module BooleanLogic

procedure main()
is
    check true and not false or true
end main

end BooleanLogic