tests/language_modules/10_expressions/invalid_semantics/unary_not_operand_mismatch.vf
module UnaryNotOperandMismatch

procedure main()
is
    check not 1
end main

end UnaryNotOperandMismatch